devops-tools/jenkins/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: docker
          image: docker:dind
          securityContext:
            privileged: true
            runAsUser: 0
          volumeMounts:
            - name: docker-certs
              mountPath: /certs/client
          resources:
            limits:
              memory: '2Gi'
              cpu: '200m'
        - name: jenkins
          image: legendmt25/jenkins:latest
          resources:
            limits:
              memory: '2Gi'
              cpu: '1000m'
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
            - name: docker-certs
              mountPath: /certs/client
              readOnly: true
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-pvc
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: docker
          hostPath:
            path: /usr/bin/docker
        - name: docker-certs
          persistentVolumeClaim:
            claimName: jenkins-docker-pvc
